# agenta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: api-security.yml  apisec-scan.yml  ci.yml  release.yml
docs/: api-contract.md
scripts/: deploy.sh
src/: lib.rs  main.rs  tools.rs
src/cli/: chat.rs  commands.rs  knowledge.rs  mind_prompt.txt  mod.rs  shell.rs  tui.rs
src/core/: agent.rs  error.rs  memory.rs  mind_prompt.txt  mod.rs  proposal.rs  storage.rs  types.rs
src/daemon/: chat_gateway.rs  main.rs  rest_api.rs  state.rs
src/guardrails/: fs.rs  mod.rs  trust.rs
src/knowledge/: ingest.rs  mod.rs
src/ollama/: client.rs  mod.rs  models.rs
src/providers/: embedder.rs  mod.rs  ocr.rs  ollama.rs  openai_compat.rs
src/scheduler/: deep_agent.rs  executor.rs  mod.rs
src/trigger/: command_trigger.rs  file_watcher.rs  http_trigger.rs  mod.rs  scheduler.rs
tools/: maps_route.sh
voice/: README.md  docker-compose.yml  pipeline.py  requirements.txt
